<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
    style="@style/ListView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
      android:id="@+id/tvBookdId"
      style="@style/ListView.Item"

      android:text="@string/default_id"/>
    <TextView
      android:id="@+id/tvBookName"

      style="@style/ListView.Item"
      android:text="@string/default_name"/>
    <TextView
      android:id="@+id/tvBookAuthor"
      style="@style/ListView.Item"
      android:text="@string/default_book_author"/>
    <TextView
      android:id="@+id/tvBookCompany"
      style="@style/ListView.Item"
      android:text="@string/default_book_company"/>
    <TextView
      android:id="@+id/tvBookYear"
      style="@style/ListView.Item"
      android:text="@string/default_book_years"/>

  </LinearLayout>

</LinearLayout>