<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
    style="@style/ListView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
   <TextView
     android:id="@+id/tvAuthorId"
     style="@style/ListView.Item"
     android:layout_weight="1.5"
     android:text="@string/default_id"/>
    <TextView
      android:id="@+id/tvAuthorName"
      style="@style/ListView.Item"
      android:text="@string/default_name"
      />
    <TextView
      android:id="@+id/tvAuthorYearOld"
      style="@style/ListView.Item"
      android:text="@string/default_years"/>
  </LinearLayout>


</LinearLayout>