<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top">
    <Button
      android:id="@+id/btnShowAuthors"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/btn_authors"/>
    <Button
      android:id="@+id/btnShowCompanyes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/btn_companyes"/>
    <Button
      android:id="@+id/btnShowBooks"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/btn_books"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">
    <TextView
      android:layout_width="@dimen/size_medium"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginBottom="@dimen/size_small"
      android:text="Search"
      android:textSize="16sp"

      />
    <EditText
      android:id="@+id/tvUserFilter"
      android:layout_width="200dp"
      android:layout_height="match_parent"
      android:layout_weight="1"/>

  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:orientation="vertical">
    <ListView
      android:id="@+id/lvMainActivity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    </ListView>

    <FrameLayout
      android:id="@+id/flMainActivity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    </FrameLayout>


  </LinearLayout>
</FrameLayout>